<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".activity.AboutActivity">

    <ImageButton
        android:id="@+id/btn_about_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/profile_pic"
        app:civ_border_width="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textColor="@color/black"
        android:fontFamily="@font/font_family"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:fontFamily="@font/font_family"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@+id/tv_greetings"
        app:layout_constraintStart_toEndOf="@id/tv_greetings"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black"
        android:fontFamily="@font/font_family"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_greetings"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:fontFamily="@font/font_family"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="@color/black"
        android:fontFamily="@font/font_family"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:fontFamily="@font/font_family"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_address"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:id="@+id/btn_phone"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_phone"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_contact_us"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageButton
        android:id="@+id/btn_email"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_email"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_contact_us"
        app:layout_constraintStart_toEndOf="@id/btn_phone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>