<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item"
        app:civ_border_color="@color/blue"
        app:civ_border_width="2dp"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_item_name"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="@font/font_family"
        app:layout_constraintStart_toEndOf="@+id/img_item"
        app:layout_constraintTop_toTopOf="@+id/img_item"
        tools:text="@string/ikea_name" />

    <TextView
        android:id="@+id/tv_item_actual_name"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="@font/font_family"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@+id/img_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
        tools:text="@string/ikea_name" />

    <TextView
        android:id="@+id/tv_item_advertisement"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textSize="14sp"
        android:fontFamily="@font/font_family"
        app:layout_constraintStart_toEndOf="@+id/img_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_actual_name"
        tools:text="@string/detail" />

    <TextView
        android:id="@+id/tv_item_price"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="normal"
        android:fontFamily="@font/font_family"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_item_name"
        tools:text="@string/price" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/ic_add"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_advertisement"
        />
</androidx.constraintlayout.widget.ConstraintLayout>